fix header alignment

--- a/web/src/app/components/header/header.component.sass
+++ b/web/src/app/components/header/header.component.sass
@@ -4,6 +4,7 @@
 
 .part-container
     display: flex
+    align-items: center
     padding: 10px
     border-radius: 150px
     background-color: $c-nqblack
